--- a/REST/package.json
+++ b/REST/package.json
@@ -13,6 +13,11 @@
   "author": "Renato Tomaz de Oliveira Aquino",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
