--- a/app_skr/pubspec.yaml
+++ b/app_skr/pubspec.yaml
@@ -21,7 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_swiper: ^1.1.6
+  transparent_image: ^2.0.0
   http: ^0.13.1
+  flutter_staggered_grid_view: ^0.4.0
   flutter:
     sdk: flutter
 
