--- a/app_skr/pubspec.yaml
+++ b/app_skr/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   transparent_image: ^2.0.0
   http: ^0.13.1
   flutter_staggered_grid_view: ^0.4.0
+  geocoding: ^2.0.0
+  maps_launcher: ^2.0.0
   flutter:
     sdk: flutter
 
